feat: updated documentation and enabled support for migrations on startup via flag
