# service/army.go
@@ -1,7 +1,6 @@
 package service
 
 import (
-	"encoding/json"
 	"net/http"
 
 	"github.com/brittonhayes/warhammer/api"
@@ -45,25 +44,4 @@ func (s *WarhammerService) GetArmies(w http.ResponseWriter, r *http.Request) *ap
 	}
 
 	return api.GetArmiesJSON200Response(armies)
-}
-
-func (s *WarhammerService) UpdateArmyByID(w http.ResponseWriter, r *http.Request, id string) *api.Response {
-
-	logging.NewLogrus(r.Context()).WithFields(logrus.Fields{
-		"event":   "UpdateArmyByID",
-		"army_id": id,
-	}).Info()
-
-	army := new(api.Army)
-	err := json.NewDecoder(r.Body).Decode(&army)
-	if err != nil {
-		return api.UpdateArmyByIDJSON404Response(api.Error{Code: http.StatusBadRequest, Message: err.Error()})
-	}
-
-	army, err = s.repo.UpdateArmyByID(r.Context(), id, army)
-	if err != nil {
-		return api.UpdateArmyByIDJSON404Response(api.Error{Code: http.StatusNotFound, Message: ErrArmyNotFound})
-	}
-
-	return api.UpdateArmyByIDJSON200Response(*army)
 }
